--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -139,7 +139,7 @@
                     </dd>
                 </dl>
 
-                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterCurrency()'>Filter</button>
+                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterCurrency(0)'>Filter</button>
                 <!--Filter-->
             </div>
         </div>
