--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
@@ -27,6 +27,12 @@
 }
 
 @{
+    string countryName = StaticName.CountryName();
+    string countryCode = StaticName.CountryCode();
+    string variableName = StaticName.VariableName();
+    string number = StaticName.Number();
+    string year = StaticName.Year();
+
     string sourceName = StaticName.SourceName();
     string sourceDate = StaticName.UploadDate();
     string sourceTime = StaticName.UploadTime();
@@ -110,7 +116,7 @@
                     </dd>
                 </dl>
 
-                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterSource()'>Filter</button>
+                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterSource(0)'>Filter</button>
                 <!--Filter-->
             </div>
         </div>
@@ -233,6 +239,46 @@
                                         @Html.HiddenFor(model => model.Username, new { id = User.Identity.Name })
 
                                         <dt>
+                                            @Html.Label(countryName, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            <select class="form-control" id="countryList" onchange="findCountryCode()"></select>
+                                        </dd>
+
+                                        <dt>
+                                            @Html.Label(countryCode, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            @Html.Editor("countryCode", new { htmlAttributes = new { @id = "CountryCode", @class = "form-control", @placeholder = "Insert " + countryCode + "*", @readonly = "readonly" } })
+                                        </dd>
+
+                                        <dt>
+                                            @Html.Label(variableName, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            <select class="form-control" id="variableList" onchange="findVariableNumber()" required></select>
+                                        </dd>
+
+                                        <dt>
+                                            @Html.Label(number, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            @Html.Editor("number", new { htmlAttributes = new { @id = "Number", @class = "form-control", @placeholder = "Insert " + number + "*", @readonly = "readonly" } })
+                                        </dd>
+
+                                        <dt>
+                                            @Html.Label(year, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            <select class="form-control" id="yearList" onchange="findValueYear()" required></select>
+                                        </dd>
+
+                                        <dt>
                                             @Html.Label(sourceName, new { @class = "control-label col-md-2" })
                                         </dt>
 
@@ -343,6 +389,72 @@
         var linkMax = '@linkLenAttr.MaximumLength';
 
         var sourceLink = '@sourceLink';
+
+        var myUsername = '@User.Identity.Name';
+
+        // inserisco gli elementi nella table
+        function DataBind(SourceList) {
+
+            $("#LoadingStatus").html("Loading....");
+
+            var SetData = $("#SetSourceList");
+            for (var i = 0; i < SourceList.length; i++) {
+
+                // json to dateTime format
+                var seconds = parseInt(SourceList[i].DateDownload.replace(/\/Date\(([0-9]+)[^+]\//i, "$1"));
+                var date = new Date(seconds);
+                var options = { year: 'numeric', month: '2-digit', day: '2-digit' };
+
+                var seconds2 = parseInt(SourceList[i].Date.replace(/\/Date\(([0-9]+)[^+]\//i, "$1"));
+                var date2 = new Date(seconds2);
+
+                var Data = "<tr class='row_" + SourceList[i].Name + "_" + date2.toLocaleDateString("en-US", options) + "_" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "'>";
+
+                if (boolAdmin || boolWriter) {
+                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>"
+                        + "<td>" + SourceList[i].Name + "</td>"
+                        + "<td>" + "<input id=\"SourceLinkTable" + i + "\"" + "class=\"form-control\" maxlength=" + linkMax + " type=\"textbox\" value=\"" + SourceList[i].Link + "\" placeholder=\"Insert " + sourceLink + "*\" onkeypress=\"saveRow(event, 0, '" + SourceList[i].Name + "', '" + date2.toLocaleDateString("en-US", options) + "', '" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "', SourceLinkTable" + i + ")\" >" + "</td>"
+                        + "<td><select id=\"selectRepository" + i + "\" class=\"form-control\" onchange=\"saveRowCombo('" + SourceList[i].Name + "', '" + date2.toLocaleDateString("en-US", options) + "', '" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "', selectRepository" + i + ")\"></select></td></td>"
+                        + "<td>" + date.toLocaleDateString("en-US", options) + "</td>"
+                        + "<td>" + SourceList[i].Username + "</td>";
+                } else {
+                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>" +
+                        "<td>" + SourceList[i].Name + "</td>" +
+                        "<td>" + SourceList[i].Link + "</td>" +
+                        "<td>" + SourceList[i].Repository + "</td>" +
+                        "<td>" + date.toLocaleDateString("en-US", options) + "</td>" +
+                        "<td>" + SourceList[i].Username + "</td>";
+                }
+
+                Data = Data + "<td>" +
+                    "<div class=\"dropdown\">" +
+                    "<button class=\"btn btn-primary dropdown-toggle\" type=\"button\" id=\"about-us\" data-toggle=\"dropdown\" aria-haspopup=\"true\" aria-expanded=\"false\">" +
+                    "Search" +
+                    "<span class=\"caret\"></span></button>" +
+                    "<ul class=\"dropdown-menu\" aria-labelledby=\"about-us\">" +
+                    "<li><a href=\"#\">Values</a></li>" +
+                    "</ul>" +
+                    "</div>";
+
+                Data = Data + "</td>" + "</tr>";
+
+                SetData.append(Data);
+
+                for (var t = 0; t < repositoryArray.length; t++) {
+                    $("#selectRepository" + i).append("<option value='" + repositoryArray[t] + "'>" + repositoryArray[t] + "</option>");
+                }
+
+                // aggiungo caratteri campo
+                $('input#SourceLinkTable' + i).maxlength({
+                    alwaysShow: true,
+                    placement: 'top-left'
+                });
+            }
+
+            $("#LoadingStatus").html(" ");
+            var page = $("#showEntry").val();
+            $('#SetSourceList').pageMe({ pagerSelector: '#myPager', showPrevNext: true, hidePageNumbers: false, perPage: parseInt(page) });
+        }
     </script>
 
     @Scripts.Render("~/Scripts/source")
