--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
@@ -200,7 +200,7 @@
                     </dd>
                 </dl>
 
-                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterValue()'>Filter</button>
+                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterValue(0)'>Filter</button>
                 <!--Filter-->
             </div>
         </div>
