--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -112,7 +112,7 @@
                     </dd>
                 </dl>
 
-                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterVariable()'>Filter</button>
+                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterVariable(0)'>Filter</button>
                 <!--Filter-->
             </div>
         </div>
