--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
@@ -43,6 +43,7 @@
 
     StringLengthAttribute linkLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Link").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
     StringLengthAttribute sourceNameLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Name").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
+    StringLengthAttribute sourceUsernameLenAttr = typeof(TobaccoNicotineApplication.Models.Source).GetProperty("Username").GetCustomAttributes(typeof(StringLengthAttribute), false).Cast<StringLengthAttribute>().SingleOrDefault();
 }
 
 @section styles {
@@ -236,7 +237,6 @@
 
                                         @Html.HiddenFor(model => model.Date, new { id = DateTime.Now.Date })
                                         @Html.HiddenFor(model => model.Time, new { id = DateTime.Now.Date.TimeOfDay })
-                                        @Html.HiddenFor(model => model.Username, new { id = User.Identity.Name })
 
                                         <dt>
                                             @Html.Label(countryName, new { @class = "control-label col-md-2" })
@@ -294,6 +294,15 @@
                                         <dd>
                                             @Html.TextBoxFor(m => m.Link, new { @id = "SourceLink", @class = "form-control", @maxlength = linkLenAttr.MaximumLength, @placeholder = "Insert " + sourceLink })
                                             @Html.ValidationMessageFor(model => model.Link, "", new { @class = "text-danger" })
+                                        </dd>
+
+                                        <dt>
+                                            @Html.Label(sourceUsername, new { @class = "control-label col-md-2" })
+                                        </dt>
+
+                                        <dd>
+                                            @Html.TextBoxFor(m => m.Username, new { @id = "SourceUsername", @class = "form-control", @maxlength = sourceUsernameLenAttr.MaximumLength, @Value = User.Identity.Name, @placeholder = "Insert " + sourceUsername + "*" })
+                                            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                                         </dd>
 
                                         <dt>
@@ -387,74 +396,10 @@
         var boolReader = '@User.IsInRole("Reader")' == "True";
 
         var linkMax = '@linkLenAttr.MaximumLength';
+        var usernameMax = '@sourceUsernameLenAttr.MaximumLength';
 
         var sourceLink = '@sourceLink';
-
-        var myUsername = '@User.Identity.Name';
-
-        // inserisco gli elementi nella table
-        function DataBind(SourceList) {
-
-            $("#LoadingStatus").html("Loading....");
-
-            var SetData = $("#SetSourceList");
-            for (var i = 0; i < SourceList.length; i++) {
-
-                // json to dateTime format
-                var seconds = parseInt(SourceList[i].DateDownload.replace(/\/Date\(([0-9]+)[^+]\//i, "$1"));
-                var date = new Date(seconds);
-                var options = { year: 'numeric', month: '2-digit', day: '2-digit' };
-
-                var seconds2 = parseInt(SourceList[i].Date.replace(/\/Date\(([0-9]+)[^+]\//i, "$1"));
-                var date2 = new Date(seconds2);
-
-                var Data = "<tr class='row_" + SourceList[i].Name + "_" + date2.toLocaleDateString("en-US", options) + "_" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "'>";
-
-                if (boolAdmin || boolWriter) {
-                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>"
-                        + "<td>" + SourceList[i].Name + "</td>"
-                        + "<td>" + "<input id=\"SourceLinkTable" + i + "\"" + "class=\"form-control\" maxlength=" + linkMax + " type=\"textbox\" value=\"" + SourceList[i].Link + "\" placeholder=\"Insert " + sourceLink + "*\" onkeypress=\"saveRow(event, 0, '" + SourceList[i].Name + "', '" + date2.toLocaleDateString("en-US", options) + "', '" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "', SourceLinkTable" + i + ")\" >" + "</td>"
-                        + "<td><select id=\"selectRepository" + i + "\" class=\"form-control\" onchange=\"saveRowCombo('" + SourceList[i].Name + "', '" + date2.toLocaleDateString("en-US", options) + "', '" + SourceList[i].Time.Hours + ":" + SourceList[i].Time.Minutes + ":" + SourceList[i].Time.Seconds + "', selectRepository" + i + ")\"></select></td></td>"
-                        + "<td>" + date.toLocaleDateString("en-US", options) + "</td>"
-                        + "<td>" + SourceList[i].Username + "</td>";
-                } else {
-                    Data = Data + "<td>" + "<div class=\"checkbox checkbox-primary checkbox-single checkBoxZoom\"><input name=\"foo2\" type=\"checkbox\"><label></label></div>" + "</td>" +
-                        "<td>" + SourceList[i].Name + "</td>" +
-                        "<td>" + SourceList[i].Link + "</td>" +
-                        "<td>" + SourceList[i].Repository + "</td>" +
-                        "<td>" + date.toLocaleDateString("en-US", options) + "</td>" +
-                        "<td>" + SourceList[i].Username + "</td>";
-                }
-
-                Data = Data + "<td>" +
-                    "<div class=\"dropdown\">" +
-                    "<button class=\"btn btn-primary dropdown-toggle\" type=\"button\" id=\"about-us\" data-toggle=\"dropdown\" aria-haspopup=\"true\" aria-expanded=\"false\">" +
-                    "Search" +
-                    "<span class=\"caret\"></span></button>" +
-                    "<ul class=\"dropdown-menu\" aria-labelledby=\"about-us\">" +
-                    "<li><a href=\"#\">Values</a></li>" +
-                    "</ul>" +
-                    "</div>";
-
-                Data = Data + "</td>" + "</tr>";
-
-                SetData.append(Data);
-
-                for (var t = 0; t < repositoryArray.length; t++) {
-                    $("#selectRepository" + i).append("<option value='" + repositoryArray[t] + "'>" + repositoryArray[t] + "</option>");
-                }
-
-                // aggiungo caratteri campo
-                $('input#SourceLinkTable' + i).maxlength({
-                    alwaysShow: true,
-                    placement: 'top-left'
-                });
-            }
-
-            $("#LoadingStatus").html(" ");
-            var page = $("#showEntry").val();
-            $('#SetSourceList').pageMe({ pagerSelector: '#myPager', showPrevNext: true, hidePageNumbers: false, perPage: parseInt(page) });
-        }
+        var sourceUsername = '@sourceUsername';
     </script>
 
     @Scripts.Render("~/Scripts/source")
